--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
 
           <nav class="header__nav">
             <ul>
-              <li><a href="programas1.html">PROGRAMAS</a></li>
-              <li><a href="index1.html">WEB SITE</a></li>
+              <li><a href="programas1.html">SOFTWARE</a></li>
               <li><a href="programas1.html">AUTOMAÇÃO</a></li>
               <li><a href="marketing.html">MARKETING</a></li>
-              <li><a href="marketing.html">DESING</a></li>
               <li><a href="contato1.html">CONTATO</a></li>
             </ul>
           </nav>
@@ -84,8 +82,8 @@
                   <!-- <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">Automação com chatbot</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">SOFTWARE INOVADOR E PERSONALIZADO</h2>
+                  <p class="people-cards__text">Desenvolvemos soluções inovadoras para comércio e-commerce, ERP e automações personalizadas,  todas cuidadosamente projetadas para impulsionar o seu negócio online e superar suas expectativas.</p>
                 </div>
             </article>
 
@@ -97,8 +95,8 @@
                <!--   <img src="img/teamsprite_02.png" alt="Carousel Img"> -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">Automão com Python </h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">ESTRATÉGIA  DE MARKETING DIGITAL </h2>
+                  <p class="people-cards__text">Nossa equipe de marketing oferece estratégias personalizadas e inovadoras, incluindo SEO, mídia social, campanhas de tráfego pago e outras táticas avançadas, para aumentar sua visibilidade, para atrair mais clientes e impulsionar o crescimento do seu negócio.</p>
                 </div>
             </article>
 
@@ -111,8 +109,8 @@
               <!--   <img src="img/teamsprite_03.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">GESTÃO DE TRAFEGO</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">REDE SOCIAL E CHATBOT</h2>
+                  <p class="people-cards__text">Nossa automação de redes sociais e chatbot oferece atendimento ao cliente 24/7, programação de postagens e interações automáticas, aumentando o engajamento e revelando um funil impulsionandor de vendas.</p>
                 </div>
             </article>
 
@@ -124,8 +122,8 @@
                <!--  <img src="img/teamsprite_04.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">DESENVOLVIMENTO DE E-COMMERCE</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">COMPROMISSO COM O SUCESSO</h2>
+                  <p class="people-cards__text">Nosso compromisso vai além da entrega de soluções. Estamos dedicados a cada cliente, oferecendo suporte total e assessoria especializada para garantir o sucesso de seus negócios online. Acreditamos que seu sucesso é o nosso sucesso.</p>
                 </div>
             </article>
 
@@ -141,9 +139,10 @@
             <div class="container2">
 
           <article>
-            <h3>Lorem ipsggum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin seggggd molestie massa. Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt egestas non at odio.</p>
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vitae lectus erat. Duis consequat laoreet velit. Mauris convallis, sapien sit amet scelerisque accumsan, fggggelis urna aliquet nunc, viverra mollis odio tellus a nisl. Nulla lobortis lectus non rutrum vivergggra. Sed et molestie libero. Sed ut ultrices dui.</p>
+            <h3>HUB TRANSFORMANDO NEGÓCIOS.</h3>
+            <p>Na Hub, não apenas fornecemos soluções inovadoras de software para empresas, e-commerce, ERP e automações personalizadas, mas também nos dedicamos a oferecer suporte total e assessoria especializada para cada cliente. Nossa equipe apaixonada por tecnologia está empenhada em impulsionar o sucesso dos negócios digitais, combinando software inovador, automação inteligente e estratégias de marketing digital eficazes.</p>
+            <p>Nossa abordagem vai além do desenvolvimento de software; estamos comprometidos em compreender profundamente as necessidades de cada cliente e oferecer soluções que realmente façam a diferença. Com a nossa expertise em automação de redes sociais e chatbots, proporcionamos um atendimento ao cliente 24/7, enquanto nossas estratégias de marketing digital, incluindo SEO, mídia social e campanhas de tráfego pago, aumentam a visibilidade e impulsionam o crescimento dos negócios.</p>
+            <P>Estamos aqui para ajudar sua empresa a alcançar o sucesso online. Junte-se a nós e descubra como podemos transformar a maneira como você faz negócios na era digital.</P>
 
 
 
@@ -162,7 +161,7 @@
         <section class="last-articles">
             <div class="last-articles__title">
                 <div class="container">
-                    <h2>Latest Articles</h2>
+                    <h2>Estamos Contratando Representantes Regionais!</h2>
                 </div>
             </div>
     <!--
@@ -187,15 +186,15 @@
 
           <div class="quote-slideshow">
             <figure>
-              <h2>Nam kkkkkkkkkkkkkkkkkkkkkkkkk, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
+              <h2>Se você é motivado, possui excelente habilidade de comunicação e deseja fazer parte de uma empresa dinâmica e inovadora, esta é a oportunidade ideal para você. </h2>
               <figcaption>
-                Nam mi enim, auctor non ultricies.
+                Junte-se a nós!
               </figcaption>
             </figure>
             <figure>
-              <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</h2>
+              <h2>Estamos empenhados em oferecer suporte abrangente e treinamento especializado para garantir o seu sucesso.</h2>
               <figcaption>
-                Nam mi enim, auctor.
+                Entre em contato conosco para saber mais.
               </figcaption>
             </figure>
             <span class="prev" style="display:none;"><i class="fas fa-angle-left fa-2x"></i></span>
