--- a/index.html
+++ b/index.html
@@ -122,8 +122,10 @@
                <!--  <img src="img/teamsprite_04.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">COMPROMISSO COM O SUCESSO</h2>
-                  <p class="people-cards__text">Nosso compromisso vai além da entrega de soluções. Estamos dedicados a cada cliente, oferecendo suporte total e assessoria especializada para garantir o sucesso de seus negócios online. Acreditamos que seu sucesso é o nosso sucesso.</p>
+                  <h2 class="people-cards__title">Desenvolvimento Web e Criação de Apps</h2>
+                  <p class="people-cards__text">Estamos comprometidos em oferecer soluções que vão além da entrega. Nosso foco é dedicado a cada cliente, proporcionando suporte total e assessoria especializada. Utilizamos tecnologias nativas para garantir a máxima performance.
+
+                  </p>
                 </div>
             </article>
 
@@ -140,9 +142,13 @@
 
           <article>
             <h3>HUB TRANSFORMANDO NEGÓCIOS.</h3>
-            <p>Na Hub, não apenas fornecemos soluções inovadoras de software para empresas, e-commerce, ERP e automações personalizadas, mas também nos dedicamos a oferecer suporte total e assessoria especializada para cada cliente. Nossa equipe apaixonada por tecnologia está empenhada em impulsionar o sucesso dos negócios digitais, combinando software inovador, automação inteligente e estratégias de marketing digital eficazes.</p>
-            <p>Nossa abordagem vai além do desenvolvimento de software; estamos comprometidos em compreender profundamente as necessidades de cada cliente e oferecer soluções que realmente façam a diferença. Com a nossa expertise em automação de redes sociais e chatbots, proporcionamos um atendimento ao cliente 24/7, enquanto nossas estratégias de marketing digital, incluindo SEO, mídia social e campanhas de tráfego pago, aumentam a visibilidade e impulsionam o crescimento dos negócios.</p>
-            <P>Estamos aqui para ajudar sua empresa a alcançar o sucesso online. Junte-se a nós e descubra como podemos transformar a maneira como você faz negócios na era digital.</P>
+            <p>Na Hub, não apenas fornecemos soluções inovadoras de software para empresas, e-commerce, ERP e automações personalizadas, mas também nos dedicamos a oferecer suporte total e assessoria especializada para cada cliente. Nossa equipe, apaixonada por tecnologia, está empenhada em impulsionar o sucesso dos negócios digitais, combinando software inovador, automação inteligente e estratégias de marketing digital eficazes.
+              <br>
+
+              Nossa abordagem vai além do desenvolvimento de software; estamos comprometidos em compreender profundamente as necessidades de cada cliente e oferecer soluções que realmente façam a diferença. Com nossa expertise em automação de redes sociais e chatbots, proporcionamos um atendimento ao cliente 24/7, enquanto nossas estratégias de marketing digital, incluindo SEO, mídia social e campanhas de tráfego pago, aumentam a visibilidade e impulsionam o crescimento dos negócios.
+              <br>
+
+              Além disso, seguimos rigorosamente as normas da LGPD (Lei Geral de Proteção de Dados), garantindo a segurança e a privacidade das informações dos nossos clientes. Estamos aqui para ajudar sua empresa a alcançar o sucesso online. Junte-se a nós e descubra como podemos transformar a maneira como você faz negócios na era digital. O seu sucesso é o nosso também.</P>
 
 
 
