--- a/produto1.html
+++ b/produto1.html
@@ -274,7 +274,27 @@ section#redes-sociais img:hover {
 }
 
 
+@keyframes appear {
+    from {
+       opacity: 0;
+       translate: -100vw 0;
+    }
 
+    to {
+        opacity: 1;
+        translate: 0 0;
+    }
+}
+
+img {
+    animation: appear 2s;
+
+}
+
+p {
+    animation: appear 2s;
+
+}
 
 
 
@@ -292,21 +312,16 @@ section#redes-sociais img:hover {
 
 
 
-  <p> <div style="border-top: 1px solid transparent;"></div> <h1>b hguysusus  ssyhcvdh</h1>  Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. Maecenas diam est, venenatis vitae dui in, vestibulum mollis arcu. Donec eu nibh tincidunt, dapibus sem eu, aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros, vitae laoreet lectus aliq</p>
+  <p> <div style="border-top: 1px solid transparent;"></div> <h1>b hguysusus  ssyhcvdh <br></h1> <p>
+     Nam mi enim, auctor non ultricies a, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. Maecenas diam est, venenatis vitae dui in, vestibulum mollis arcu. Donec eu nibh tincidunt, dapibus sem eu, aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros, vitae laoreet lectus aliq
 
-  <p>aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros, vitae laoreet lectus aliq</p>
+  aliquam dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum consectetur commodo eros, vitae laoreet lectus aliq</p>
 
 
 
 </div>
 
 </div>
-
-
-
-
-
-
 
 
 
@@ -321,18 +336,7 @@ section#redes-sociais img:hover {
 
 
 
-
-
-
-
-
   </header >
-
-
-
-
-
-
 
 
 
@@ -341,11 +345,10 @@ section#redes-sociais img:hover {
 <!-- Barra de navegação -->
 
 <div class="navbar">
-  <a href="http://127.0.0.1:5500/hub-web/index.html">hub</a>
-  <a href="#loja">loja</a>
-  <a href="#automacao">automação</a>
-  <a href="#design">design</a>
-  <a href="#contato">contato</a>
+  <a href="http://127.0.0.1:5500/hub-web/index.html">VOLTAR</a>
+
+
+
 
 </div>
 
@@ -445,10 +448,12 @@ section#redes-sociais img:hover {
     <abbr title="Meta-Verse"> <a href="https://www.oculus.com/profile/Rhoany_12?d=m" target="tela"><img src="redes/meta4.png" alt="meta"></a></abbr>
     <abbr title="rhaonyferraz@hotmail.com"><a href="index5.html" target="tela"><img src="redes/communication.png" alt="rhaonyferraz@hotmail.com"></a></abbr>
     <abbr title="WhatsApp-ChatBot"><a href="https://web.whatsapp.com/send?phone=5511912990147" target="tela"><img src="redes/whatsapp.png" alt="WhatsApp-Bot"></a></abbr>
-
     <a id="iconeFixo" href="caminho/do/arquivo.html">
-      <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing"title="CHATBOT">
+      <img src="redes/phone-message.png" alt="Phene" style="font-size: 25px;" class="pulsing" title="CHATBOT">
     </a>
+
+
+
 
 
 
