--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 
           <nav class="header__nav">
             <ul>
-              <li><a href="programas1.html">SOFTWARE</a></li>
+              <li><a href="https://hubdigitals.ysaas.website/">SOFTWARE</a></li>
               <li><a href="programas1.html">AUTOMAÇÃO</a></li>
               <li><a href="marketing.html">MARKETING</a></li>
-              <li><a href="contato1.html">CONTATO</a></li>
+              <li><a href="https://hubdigitals.ysaas.website/contato">CONTATO</a></li>
+              <li><a href="https://sistema.hubdigitals.com/Login.aspx?ReturnUrl=%2f">ENTRAR</a></li>
             </ul>
           </nav>
         </header >
