--- a/automa.html
+++ b/automa.html
@@ -33,8 +33,7 @@
               <li><a href="programas1.html">AUTOMAÇÃO</a></li>
               <li><a href="marketing.html">MARKETING</a></li>
               <li><a href="https://hubdigitals.ysaas.website/contato">CONTATO</a></li>
-              <li><a href="https://sistema.hubdigitals.com/Login.aspx?ReturnUrl=%2f" style="color: blue;">ENTRAR</a></li>
-
+              <li><a href="https://sistema.hubdigitals.com/Login.aspx?ReturnUrl=%2f">ENTRAR</a></li>
             </ul>
           </nav>
         </header >
@@ -44,61 +43,10 @@
         </section>
 
 
-        <section class="hero">
-          <img src="img/b2.png" alt="Carousel Img">
-          <h1 class="hero__title">
-               SOLUÇÕES DIGITAIS  <abbr title="Wordpress"></abbr>
-          </h1>
 
 
-          <a id="iconeFixo" href="caminho/do/arquivo.html" style="display: block; margin-top: 25px; margin-left: -20px;">
-            <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing"title="CHATBOT">
-        </a>
+        <!--
 
-        </section>
-
-   <!--PARALAX
-        <div class="wrapper">
-          <section class="module parallax parallax-1">
-
-           </section>
-
-           <section class="module content">
-               <div class="container">
-
-
-               </div>
-           </section>    -->
-
-<br>
-      </section>
-
-        <!---->
-
-            <section class="people-cards">
-            <article class="people-cards__card">
-
-
-
-                <div class="people-cards__avatar">
-                   <img src="img/consultation.png" alt="Carousel Img">
-                </div>
-                <div class="people-cards__content">
-                  <h2 class="people-cards__title">SOFTWARE INOVADOR E PERSONALIZADO</h2>
-                  <p class="people-cards__text">Desenvolvemos soluções inovadoras para comércio e-commerce, ERP e automações personalizadas,  todas cuidadosamente projetadas para impulsionar o seu negócio online e superar suas expectativas.</p>
-                </div>
-            </article>
-
-            <article class="people-cards__card">
-               <!---
-                <img src="img/c02.jpg" alt="Carousel Img" class="people-cards__image"> -->
-
-                <div class="people-cards__avatar">
-                  <img src="img/people.png" alt="Carousel Img">
-                </div>
-                <div class="people-cards__content">
-                  <h2 class="people-cards__title">ESTRATÉGIA  DE MARKETING DIGITAL </h2>
-                  <p class="people-cards__text">Nossa equipe de marketing oferece estratégias personalizadas e inovadoras, incluindo SEO, mídia social, campanhas de tráfego pago e outras táticas avançadas, para aumentar sua visibilidade, para atrair mais clientes e impulsionar o crescimento do seu negócio.</p>
                 </div>
             </article>
 
@@ -107,34 +55,16 @@
                 <!--
                 <img src="img/c03.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
-                <div class="people-cards__avatar">
-               <img src="img/people.png" alt="Carousel Img">
-                </div>
-                <div class="people-cards__content">
-                  <h2 class="people-cards__title">REDE SOCIAL E CHATBOT</h2>
-                  <p class="people-cards__text">Nossa automação de redes sociais e chatbot oferece atendimento ao cliente 24/7, programação de postagens e interações automáticas, aumentando o engajamento e revelando um funil impulsionandor de vendas.</p>
-                </div>
-            </article>
 
-            <article class="people-cards__card">
-                <!--
-                <img src="img/c04.jpg" alt="Carousel Img" class="people-cards__image">  -->
-
-                <div class="people-cards__avatar">
-               <img src="img/send.png" alt="Carousel Img">
-                </div>
-                <div class="people-cards__content">
-                  <h2 class="people-cards__title">Desenvolvimento Web e Criação de Apps</h2>
-                  <p class="people-cards__text">Estamos comprometidos em oferecer soluções que vão além da entrega. Nosso foco é dedicado a cada cliente, proporcionando suporte total e assessoria especializada. Utilizamos tecnologias nativas para garantir a máxima performance.
 
                   </p>
                 </div>
             </article>
 
-        </section>
+        </section>  -->
 
 
-        <section class="content">
+        <section class="content">   -->
         <hr>
 
 
