--- a/produto1.html
+++ b/produto1.html
@@ -345,7 +345,9 @@ p {
 <!-- Barra de navegação -->
 
 <div class="navbar">
+  <a href="http://127.0.0.1:5500/hub-web/index.html">INI</a>
   <a href="http://127.0.0.1:5500/hub-web/index.html">VOLTAR</a>
+  <a href="http://127.0.0.1:5500/hub-web/index.html">FAÇA UM TESTE</a>
 
 
 
@@ -368,19 +370,19 @@ p {
     <input type="radio" name="radio-btn" id="radio4">
 
     <div class="slide first">
-      <img src="https://images.pexels.com/photos/574071/pexels-photo-574071.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Imagem 1" />
+      <img src="img/articles/09.jpg" alt="Imagem 1" />
     </div>
 
     <div class="slide">
-      <img src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Imagem 2" />
+      <img src="img/articles/03.jpg" alt="Imagem 2" />
     </div>
 
     <div class="slide">
-      <img src="https://images.pexels.com/photos/1181677/pexels-photo-1181677.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Imagem 3" />
+      <img src="img/articles/01.jpg" alt="Imagem 3" />
     </div>
 
     <div class="slide">
-      <img src="https://images.pexels.com/photos/16129724/pexels-photo-16129724/free-photo-of-homem-trabalhando-digitando-pc.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Imagem 4" />
+      <img src="img/articles/10.jpg" alt="Imagem 4" />
 
     </div>
 
