--- a/programas1.html
+++ b/programas1.html
@@ -38,7 +38,7 @@
             </ul>
             <div style="border-top: 1px solid transparent;"></div>
           </nav>
-          <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PROGRAMAS</h1>
+          <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AUTOMAÇÃO</h1>
         </header >
 
 
@@ -91,7 +91,7 @@
           }
       </style>
 
-
+        <!---
       <div class="container2">
 
           <section class="hero1">
@@ -104,7 +104,7 @@
               <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="ecommerce">E-COMMERCE</a></div>
               <div class="box-container"><a href="http://127.0.0.1:5500/hub-web/index.html" class="box" id="ecommerce">E-COMMERCE</a></div>
           </section>
-      </div>
+      </div>     -->
 
 
 
@@ -112,10 +112,15 @@
 
 
 
-
-        <div class="wrapper">
-          <section class="module parallax parallax-1">
-
+         <!--- --->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+          <section class="">
+          <hr>
            </section>
 
            <section class="module content">
@@ -143,7 +148,8 @@
 
 
                 <div class="people-cards__avatar">
-                  <!-- <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
+                  <img src="img/send.png">
+                <!--   <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
                 </div>
                 <div class="people-cards__content">
                   <h2 class="people-cards__title">Automação com chatbot</h2>
@@ -156,7 +162,7 @@
                 <img src="img/c02.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
                 <div class="people-cards__avatar">
-               <!--   <img src="img/teamsprite_02.png" alt="Carousel Img"> -->
+                  <img src="img/whatsapp.png">
                 </div>
                 <div class="people-cards__content">
                   <h2 class="people-cards__title">Automão com Python </h2>
@@ -169,7 +175,9 @@
                 <!--
                 <img src="img/c03.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
+
                 <div class="people-cards__avatar">
+                  <img src="img/group.png">
               <!--   <img src="img/teamsprite_03.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
@@ -183,6 +191,7 @@
                 <img src="img/c04.jpg" alt="Carousel Img" class="people-cards__image">  -->
 
                 <div class="people-cards__avatar">
+                  <img src="img/people.png">
                <!--  <img src="img/teamsprite_04.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
@@ -274,7 +283,7 @@
           <abbr title="rhaonyferraz@hotmail.com"><a href="index5.html"target="tela"><img src="redes/communication.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
           <abbr title="WhatsApp-ChatBot"><a href="https://web.whatsapp.com/send?phone=5511912990147"target="tela"><img src="redes/whatsapp.png"alt="WhatsApp-Bot"></a></abbr>
        </section>
-
+ <!---
         <footer class="footer">
             <div class="container">
                 <h2 class="footer__logo"></h2>
@@ -287,7 +296,7 @@
 
 
             </div>
-        </footer>
+        </footer> --->
 
         <script src="js/menu.js"></script>
         <script src="js/carousel.js"></script>
