--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul>
               <li><a href="https://hubdigitals.ysaas.website/">SOFTWARE</a></li>
               <li><a href="programas1.html">AUTOMAÇÃO</a></li>
-              <li><a href="marketing.html">MARKETING</a></li>
+              <li><a href="marketing1.html">MARKETING</a></li>
               <li><a href="https://hubdigitals.ysaas.website/contato">CONTATO</a></li>
               <li><a href="https://sistema.hubdigitals.com/Login.aspx?ReturnUrl=%2f" style="color: blue;">ENTRAR</a></li>
 
@@ -81,7 +81,7 @@
 
 
                 <div class="people-cards__avatar">
-                   <img src="img/consultation.png" alt="Carousel Img">
+                   <img src="img/software (2).png" alt="Carousel Img">
                 </div>
                 <div class="people-cards__content">
                   <h2 class="people-cards__title">SOFTWARE INOVADOR E PERSONALIZADO</h2>
@@ -94,7 +94,7 @@
                 <img src="img/c02.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
                 <div class="people-cards__avatar">
-                  <img src="img/people.png" alt="Carousel Img">
+                  <img src="img/social-media (1).png" alt="Carousel Img">
                 </div>
                 <div class="people-cards__content">
                   <h2 class="people-cards__title">ESTRATÉGIA  DE MARKETING DIGITAL </h2>
@@ -108,7 +108,7 @@
                 <img src="img/c03.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
                 <div class="people-cards__avatar">
-               <img src="img/people.png" alt="Carousel Img">
+               <img src="img/chatbot (2).png" alt="Carousel Img">
                 </div>
                 <div class="people-cards__content">
                   <h2 class="people-cards__title">REDE SOCIAL E CHATBOT</h2>
@@ -121,7 +121,7 @@
                 <img src="img/c04.jpg" alt="Carousel Img" class="people-cards__image">  -->
 
                 <div class="people-cards__avatar">
-               <img src="img/send.png" alt="Carousel Img">
+               <img src="img/browserofficeaddressbrowserinternetlinkpagewebwebsite.png" alt="Carousel Img">
                 </div>
                 <div class="people-cards__content">
                   <h2 class="people-cards__title">Desenvolvimento Web e Criação de Apps</h2>
