--- a/marketing1.html
+++ b/marketing1.html
@@ -38,7 +38,7 @@
             </ul>
             <div style="border-top: 1px solid transparent;"></div>
           </nav>
-          <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AUTOMAÇÃO</h1>
+          <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MARKETING</h1>
         </header >
 
 
@@ -46,7 +46,7 @@
    h1 {
         font-size: 2rem;
         padding: 10px 20px; /* Adiciona espaçamento interno */
-        background-color: rgb(57, 100, 150); /* Cor de fundo azul */
+        background-color: #7b3773; /* Cor de fundo azul */
         color: #fff; /* Cor do texto branco */
         border-radius: 1px; /* Borda arredondada */
         width: 400px; /* Define a largura baseada no conteúdo */
@@ -87,7 +87,7 @@
           }
 
           .box-container:hover {
-              background-color: rgb(57, 100, 150); /* Muda a cor de fundo para azul ao passar o mouse */
+              background-color: rgb(121, 57, 150); /* Muda a cor de fundo para azul ao passar o mouse */
           }
       </style>
 
@@ -148,7 +148,7 @@
 
 
                 <div class="people-cards__avatar">
-                  <img src="img/send.png">
+                  <img src="img/facebook.png">
                 <!--   <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
                 </div>
                 <div class="people-cards__content">
@@ -162,7 +162,7 @@
                 <img src="img/c02.jpg" alt="Carousel Img" class="people-cards__image"> -->
 
                 <div class="people-cards__avatar">
-                  <img src="img/whatsapp.png">
+                  <img src="img/instagram-logo.png">
                 </div>
                 <div class="people-cards__content">
                   <h2 class="people-cards__title">Automão com Python </h2>
@@ -177,7 +177,7 @@
 
 
                 <div class="people-cards__avatar">
-                  <img src="img/group.png">
+                  <img src="img/camera.png">
               <!--   <img src="img/teamsprite_03.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
@@ -191,7 +191,7 @@
                 <img src="img/c04.jpg" alt="Carousel Img" class="people-cards__image">  -->
 
                 <div class="people-cards__avatar">
-                  <img src="img/people.png">
+                  <img src="img/image-editing.png">
                <!--  <img src="img/teamsprite_04.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
