--- a/produto1.html
+++ b/produto1.html
@@ -345,10 +345,14 @@ p {
 <!-- Barra de navegação -->
 
 <div class="navbar">
-  <a href="http://127.0.0.1:5500/hub-web/index.html">INI</a>
-  <a href="http://127.0.0.1:5500/hub-web/index.html">VOLTAR</a>
-  <a href="http://127.0.0.1:5500/hub-web/index.html">FAÇA UM TESTE</a>
+  <ul>
+    <li><a href="https://hubdigitals.ysaas.website/">SOFTWARE</a></li>
+    <li><a href="programas1.html">AUTOMAÇÃO</a></li>
+    <li><a href="marketing1.html">MARKETING</a></li>
+    <li><a href="https://hubdigitals.ysaas.website/contato">CONTATO</a></li>
+    <li><a href="https://sistema.hubdigitals.com/Login.aspx?ReturnUrl=%2f" style="color: blue;">ENTRAR</a></li>
 
+  </ul>
 
 
 
