--- a/produto1.html
+++ b/produto1.html
@@ -214,16 +214,22 @@
 
 
 .container {
-    width: 50%; /* Define a largura do container como 50% da largura da tela */
-    position: fixed; /* Fixa o container na tela */
-    right: 20px; /* Alinha o container à direita da tela */
+     /* Define a largura do container como 50% da largura da tela */
+    /* Fixa o container na tela */
+     /* Alinha o container à direita da tela */
     top: 0px; /* Alinha o container ao topo da tela */
-    background-color: rgb(255, 255, 255); /* Adiciona um fundo branco com transparência */
-    padding: 100px; /* Adiciona um espaçamento interno */
-    box-sizing: border-box; /* Garante que padding seja incluído na largura do elemento */
+
+    padding: 30px; /* Adiciona um espaçamento interno */
+    /* Garante que padding seja incluído na largura do elemento */
     overflow-y: scroll; /* Adiciona scroll vertical */
+    margin: auto;
+    /*
+    text-align: left; /* Alinha todo o texto à esquerda
+    padding: 3px;
+            margin: auto;*/
 
 }
+
 
 
 
