--- a/programas1.html
+++ b/programas1.html
@@ -89,6 +89,15 @@
           .box-container:hover {
               background-color: rgb(57, 100, 150); /* Muda a cor de fundo para azul ao passar o mouse */
           }
+
+          .container {
+    text-align: left; /* Alinha todo o texto à esquerda */
+    padding: 3px;
+            margin: auto;
+          }
+
+
+
       </style>
 
         <!---
