--- a/marketing1 copy.html
+++ b/marketing1 copy.html
@@ -102,9 +102,12 @@
 
           }
           .container {
-    text-align: left; /* Alinha todo o texto à esquerda */
+    text-align:center; /* Alinha todo o texto à esquerda */
     padding: 3px;
-            margin: auto;
+     margin: auto;
+
+
+
 
 }
 
