--- a/programas1.html
+++ b/programas1.html
@@ -91,9 +91,10 @@
           }
 
           .container {
-    text-align: left; /* Alinha todo o texto à esquerda */
-    padding: 3px;
-            margin: auto;
+            text-align: center; /* Alinha todo o texto à esquerda */
+              padding: 3px;
+             margin: auto;
+
           }
 
 
