--- a/marketing1.html
+++ b/marketing1.html
@@ -46,7 +46,7 @@
    h1 {
         font-size: 2rem;
         padding: 10px 20px; /* Adiciona espaçamento interno */
-        background-color: #7b3773; /* Cor de fundo azul */
+        background-color: rgb(121, 57, 150); /* Cor de fundo azul */
         color: #fff; /* Cor do texto branco */
         border-radius: 1px; /* Borda arredondada */
         width: 400px; /* Define a largura baseada no conteúdo */
@@ -103,10 +103,10 @@
           }
           .container {
     text-align: center; /* Alinha todo o texto à esquerda */
-    padding: 3px;
+    padding: 0px 0px;
 
-            margin-right: auto;
-            margin-right: auto;
+    margin-right: auto;
+    margin-right: auto;
 
 
 }
