--- a/programas1.html
+++ b/programas1.html
@@ -92,7 +92,7 @@
 
           .container {
             text-align: center; /* Alinha todo o texto à esquerda */
-              padding: 3px;
+              padding: 0px 0px;
              margin: auto;
 
           }
